--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
-*{
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@1,200&display=swap');
+
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
