--- a/style.css
+++ b/style.css
@@ -7,3 +7,11 @@
     font-family: 'Nunito', sans-serif;
 }
 
+html{
+    font-size: 62.5%;
+}
+
+body{
+    background-color: black;
+    padding: 5rem 10rem;
+}
