--- a/style.css
+++ b/style.css
@@ -38,3 +38,13 @@ body {
     border-radius: 1rem;
     box-shadow: 0 2rem 2rem -1.7rem rgba(0, 0, 0, 0.3);
 }
+
+.post_id {
+    width: 5rem;
+    height: 5rem;
+    background-color: #333;
+    color: aliceblue;
+    display: grid;
+    place-items: center;
+    font-size: 2rem;
+}
