--- a/style.css
+++ b/style.css
@@ -50,18 +50,19 @@ body {
     font-size: 2rem;
 }
 
-.title{
+.title {
     font-size: 2.2rem;
     margin: 2rem;
     text-transform: capitalize;
 }
 
-.description{
+.description {
     font-size: 1.7rem;
 }
 
 
-.check{
+.check {
     color: #fff;
     font-size: 4rem;
+    text-align: center;
 }
