--- a/style.css
+++ b/style.css
@@ -61,8 +61,18 @@ body {
 }
 
 
-.check {
-    color: #fff;
-    font-size: 4rem;
+#loadmore {
+    display: inline-block;
+    outline: none;
+    border: none;
+    padding: 15px 15px;
+    border-radius: 5px;
+    font-weight: bold;
+    font-size: 2rem;
+    cursor: pointer;
+}
+
+.btn_container {
     text-align: center;
+    margin-top: 20px;
 }
