--- a/style.css
+++ b/style.css
@@ -25,6 +25,8 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    max-height: 80%;
+    overflow: auto;
 }
 
 .container h1 {
@@ -70,9 +72,14 @@ body {
     font-weight: bold;
     font-size: 2rem;
     cursor: pointer;
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    margin: 40px;
 }
 
 .btn_container {
     text-align: center;
     margin-top: 20px;
+    /* display: none; */
 }
